# Count-Primes-with-Claude

./: .gitignore  A-Random-Walk-to-a-Trillion.md  CMakeLists.txt  COMPARE-RESULTS.md  HANDOFF.md  Makefile  README.md  copri_10e8.csv  plot.py  results_10e7_both.csv  results_10e7_u32.csv  results_10e9.csv  results_sieve_10e9.csv  run.py  scale.py  sweep.py
common/: bench.hpp  prime.hpp  sieve_common.hpp
docs/claude-memory/: MEMORY.md  README.md  bucket-sieve-next-step.md  copri-project-overview.md
results_m3max/: SPECS.md  results_10e10.csv  results_10e9_u32.csv  scale_sieve_3-12.csv  scale_sieve_barrett_3-12.csv  sweep_10e8.csv
results_rtx2080ti/: run_10e8.csv  scale_sieve_3-11.csv  sweep_10e7.csv
src/: atomic_counter.cpp  atomic_dynamic.cpp  cuda_util.cuh  omp_target.cpp  opencl.cpp  opencl.cu  openmp.cpp  partition.cpp  prime_kernel.cl  prime_kernel.cuh  seq.cpp  sieve_cpu.cpp  sieve_gpu.cpp  sieve_gpu.cu  sieve_gpu_barrett.cpp  sieve_gpu_barrett.cu  sieve_kernel.cl  sieve_kernel.cuh  stripe.cpp
